2008-03-09      Sebastian Holtermann  <sebholt@web.de>

	* FlexForm: Simplified export link activation (default TRUE)
	* FlexForm: FE-Editor clear cache flag now is TRUE by default
	* Backend: The authorship table is no longer hidden. Though manual editing is not recommended.
	* Backend: Edit fields for "type" and "ISBN" did not show up in the BE - fixed
	* Release version 0.5.2

2008-03-08      Sebastian Holtermann  <sebholt@web.de>

	* Database: Fixed missing pid field in tx_sevenpack_authorships
	            Updaters must use the UPDATE! function in the extension manager!
	* Database: New publication state "in preparation"
	* Editor: Support for field default values via TypoScript
	* Editor: year, month and day have been merged into one date field
	* Editor: HTML changes visible as slight style/appearance changes
	* Editor: Logging of changes (new/save/hide/delete) in the Typo3 log
	* List: Manipulator Icons are now lined up horizontally and positioned on the right side
	* List: Slight style changes
	* General: Code cleanups
	* Release version 0.5.1

2008-01-24      Sebastian Holtermann  <sebholt@web.de>

	* New: Library fields: reviewed, in_library, borrowed_by
	* New: Library field filters
	* Editor: New field group: Library fields
	* Editor: Fixed field list for mastersthesis
	* List: More consistent highlightning rules
	* Release version 0.5

2008-01-24      Sebastian Holtermann  <sebholt@web.de>

	* New: BibTeX import
	* New: Storage selection for imports
	* Export: Improved BibTeX export
	* Export: State is imported/eported as a word not a number
	* Editor: Made publication state a required datum
	* Editor: Put the delete button on top as well
	* Editor: Autosubmit on a bibtype change
	* List: Autosubmit on the year selection
	* List: Decreased reference item distance (padding)
	* Release version 0.4

2008-11-13      Sebastian Holtermann  <sebholt@web.de>

	* New: XML import
	* New: Optional (simple) statistics