@@ -3,7 +3,7 @@
 ########################################################################
 # Extension Manager/Repository config file for ext: "sevenpack"
 #
-# Auto generated 09-03-2009 16:11
+# Auto generated 12-03-2009 16:19
 #
 # Manual updates:
 # Only the data in the array - anything else is removed by next write.
@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'A customizable bibliography and publication reference manager with a convenient frontend editor and import/export functionality.',
 	'category' => 'plugin',
 	'shy' => 0,
-	'version' => '0.5.2',
+	'version' => '0.5.3',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
@@ -40,7 +40,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'suggests' => array(
 		),
 	),
-	'_md5_values_when_last_written' => 'a:42:{s:9:"ChangeLog";s:4:"1389";s:10:"README.txt";s:4:"9c1b";s:20:"class.ext_update.php";s:4:"6c76";s:12:"ext_icon.gif";s:4:"4c13";s:17:"ext_localconf.php";s:4:"18d1";s:14:"ext_tables.php";s:4:"2216";s:14:"ext_tables.sql";s:4:"c8d2";s:32:"icon_tx_sevenpack_references.png";s:4:"4db6";s:32:"icon_tx_sevenpack_references.xcf";s:4:"dbdb";s:13:"locallang.xml";s:4:"981a";s:16:"locallang_db.xml";s:4:"a33a";s:7:"tca.php";s:4:"a60b";s:47:"res/class.tx_sevenpack_citeid_generator_ext.php";s:4:"7bb4";s:45:"res/class.tx_sevenpack_pregexp_translator.php";s:4:"7b09";s:45:"res/class.tx_sevenpack_reference_accessor.php";s:4:"44f6";s:34:"res/class.tx_sevenpack_utility.php";s:4:"632a";s:28:"res/sixpack_to_sevenpack.php";s:4:"4971";s:14:"res/table.tmpl";s:4:"a21a";s:14:"doc/manual.sxw";s:4:"936a";s:16:"doc/syntax.xhtml";s:4:"058a";s:14:"pi1/ce_wiz.gif";s:4:"ba3a";s:14:"pi1/ce_wiz.png";s:4:"64e2";s:14:"pi1/ce_wiz.xcf";s:4:"7c4e";s:43:"pi1/class.tx_sevenpack_citeid_generator.php";s:4:"b965";s:35:"pi1/class.tx_sevenpack_exporter.php";s:4:"76da";s:42:"pi1/class.tx_sevenpack_exporter_bibtex.php";s:4:"8a50";s:39:"pi1/class.tx_sevenpack_exporter_xml.php";s:4:"9b44";s:35:"pi1/class.tx_sevenpack_importer.php";s:4:"b0d2";s:42:"pi1/class.tx_sevenpack_importer_bibtex.php";s:4:"7d34";s:39:"pi1/class.tx_sevenpack_importer_xml.php";s:4:"7b01";s:30:"pi1/class.tx_sevenpack_pi1.php";s:4:"71e9";s:38:"pi1/class.tx_sevenpack_pi1_wizicon.php";s:4:"11e1";s:38:"pi1/class.tx_sevenpack_single_view.php";s:4:"4f6e";s:13:"pi1/clear.gif";s:4:"cc11";s:19:"pi1/flexform_ds.xml";s:4:"d78a";s:17:"pi1/locallang.xml";s:4:"2ac0";s:24:"pi1/locallang_editor.xml";s:4:"a50f";s:22:"pi1/locallang_flex.xml";s:4:"4a08";s:34:"pi1/static/default_style/setup.txt";s:4:"52a1";s:32:"pi1/static/default/constants.txt";s:4:"d437";s:32:"pi1/static/default/editorcfg.txt";s:4:"4308";s:28:"pi1/static/default/setup.txt";s:4:"546c";}',
+	'_md5_values_when_last_written' => 'a:42:{s:9:"ChangeLog";s:4:"30e8";s:10:"README.txt";s:4:"9c1b";s:20:"class.ext_update.php";s:4:"6c76";s:12:"ext_icon.gif";s:4:"4c13";s:17:"ext_localconf.php";s:4:"18d1";s:14:"ext_tables.php";s:4:"b3b9";s:14:"ext_tables.sql";s:4:"6777";s:32:"icon_tx_sevenpack_references.png";s:4:"4db6";s:32:"icon_tx_sevenpack_references.xcf";s:4:"dbdb";s:13:"locallang.xml";s:4:"981a";s:16:"locallang_db.xml";s:4:"9e42";s:7:"tca.php";s:4:"d017";s:47:"res/class.tx_sevenpack_citeid_generator_ext.php";s:4:"7bb4";s:45:"res/class.tx_sevenpack_pregexp_translator.php";s:4:"7b09";s:45:"res/class.tx_sevenpack_reference_accessor.php";s:4:"4371";s:34:"res/class.tx_sevenpack_utility.php";s:4:"632a";s:28:"res/sixpack_to_sevenpack.php";s:4:"4971";s:14:"res/table.tmpl";s:4:"a21a";s:14:"doc/manual.sxw";s:4:"936a";s:16:"doc/syntax.xhtml";s:4:"058a";s:14:"pi1/ce_wiz.gif";s:4:"ba3a";s:14:"pi1/ce_wiz.png";s:4:"64e2";s:14:"pi1/ce_wiz.xcf";s:4:"7c4e";s:43:"pi1/class.tx_sevenpack_citeid_generator.php";s:4:"b965";s:35:"pi1/class.tx_sevenpack_exporter.php";s:4:"76da";s:42:"pi1/class.tx_sevenpack_exporter_bibtex.php";s:4:"9515";s:39:"pi1/class.tx_sevenpack_exporter_xml.php";s:4:"9b44";s:35:"pi1/class.tx_sevenpack_importer.php";s:4:"b0d2";s:42:"pi1/class.tx_sevenpack_importer_bibtex.php";s:4:"665b";s:39:"pi1/class.tx_sevenpack_importer_xml.php";s:4:"7b01";s:30:"pi1/class.tx_sevenpack_pi1.php";s:4:"5ad1";s:38:"pi1/class.tx_sevenpack_pi1_wizicon.php";s:4:"11e1";s:38:"pi1/class.tx_sevenpack_single_view.php";s:4:"0c53";s:13:"pi1/clear.gif";s:4:"cc11";s:19:"pi1/flexform_ds.xml";s:4:"d78a";s:17:"pi1/locallang.xml";s:4:"2ac0";s:24:"pi1/locallang_editor.xml";s:4:"a50f";s:22:"pi1/locallang_flex.xml";s:4:"4a08";s:34:"pi1/static/default_style/setup.txt";s:4:"52a1";s:32:"pi1/static/default/constants.txt";s:4:"d437";s:32:"pi1/static/default/editorcfg.txt";s:4:"4308";s:28:"pi1/static/default/setup.txt";s:4:"6334";}',
 	'suggests' => array(
 	),
 );
